<resources>

    <string name="app_name_haccp">haccp.center</string>
    <string name="version_name">1.0</string>
    <string name="profile">Profile</string>
    <string name="user_profile">Profile</string>
    <string name="user_settings">Settings</string>
    <string name="about">About</string>
    <string name="points">Points</string>
    <string name="companies">Companies</string>
    <string name="send">Send</string>
    <string name="code">Code</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="authorization">Authorization</string>
    <string name="name_login">Login</string>
    <string name="password">Password</string>
    <string name="loading">Loading&#8230;</string>
    <string name="butt_reload">Reload</string>
    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Logout</string>
    <string name="continue_str">Continue</string>
    <string name="welcome">Welcome!</string>
    <string name="scan">Scan</string>
    <string name="scanner">Scanner</string>
    <string name="about_program">About program</string>
    
    <string name="app_link_html"><a href="http://haccp.center">http://haccp.center</a></string>
    <string name="app_link">http://haccp.center</string>
    <string name="statistics">Statistics</string>
    <string name="attributes">Attributes</string>
    <string name="control_point">Control point</string>
    <string name="installation_date">Installation date</string>
    <string name="who_set">Who set</string>
    <string name="point_type">Point\'s type</string>
    <string name="multi_barrier_level">Multi-barrier level</string>
    <string name="object">Object</string>
    <string name="coordinates">Coordinates</string>
    <string name="status">Status</string>
    <string name="point_number">Control point #</string>
    <string name="contours">Contours</string>
    <string name="company_objects">Company\'s objects</string>
    <string name="poison">Poison</string>
    <string name="active_substance">Active substance</string>
    
    <!-- CP TYPES -->
    <string name="cp_type_grounbait_box">Grounbait box</string>
    <string name="cp_type_trap">Trap</string>
    <string name="cp_type_insecticidal_lamp_active">Active insecticidal lamp</string>
    <string name="cp_type_insecticidal_lamp_passive">Passive insecticidal lamp</string>
    <string name="cp_type_thermometer">Thermometer</string>
    <string name="cp_type_monitoring_platform_flying">Flying monitoring platform</string>
    <string name="cp_type_monitoring_platform_crawling">Crawling monitoring platform</string>

    <!-- CP STATISTICS TYPE -->
    <string name="cp_statistics_type_warning">Warning</string>
    <string name="cp_statistics_type_approved">Approved</string>
    <string name="cp_statistics_type_danger">Danger</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="timeslot">Timeslot</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="apply">Apply</string>
    <string name="choose_range">Choose range</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_weak">Last weak</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="this_month">This month</string>
    <string name="custom_range">Custom range</string>
    <string name="done">DONE</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="action">Action</string>
    <string name="add_data_record">Add statistics record</string>
    <string name="all_items_downloaded">All items downloaded</string>
    <string name="deratisation">Deratisation</string>
    <string name="desinsectum">Desinsectum</string>
    <string name="point_list">Points list</string>
    <string name="no_matches">No matches&#8230;</string>

    <!-- Restful Provider -->
    <string name="provider_name">Haccp provider</string>
    <string name="synchronization">Synchronization&#8230;</string>
    <string name="title_search">Search</string>
    <string name="search_point_label">Haccp points</string>
    <string name="search_point_hint">Point name</string>
    
    <!-- Preferences -->
    <string name="pref_category_sync">Synchronization</string>
    <string name="pref_category_sync_dialog_title">Choose period</string>
    <string name="pref_category_statistics">Statistics</string>
    <string name="pref_category_statistics_dialog_title">Choose period</string>
    <string name="pref_category_about">About</string>
    
    <string name="pref_item_sync_frequency">Sync every</string>
    <!-- array of values-->
    <string name="pref_sync_array_half_an_hour">half an hour</string>
    <string name="pref_sync_array_hour">hour</string>
    <string name="pref_sync_array_day">day</string>
    
    <string name="pref_item_store_statistics">Store statistics for</string>
    <!-- array of values-->
    <string name="pref_statistics_array_7_days">7 days</string>
    <string name="pref_statistics_array_10_days">10 days</string>
    <string name="pref_statistics_array_30_days">30 days</string>
    <string name="pref_statistics_array_current_weak">current weak</string>
    <string name="pref_statistics_array_current_month">current month</string>
    
    <string name="pref_item_site">Site:</string>
    <string name="pref_item_version">Version:</string>
    
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="zero_to_all">to all</string>
    <string name="zero_to_others">to others</string>
    <string name="selected">%1$s selected</string>
    
    
</resources>