<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/pref_category_sync">
        <ListPreference
                android:key="sync_frequency"
                android:title="@string/pref_item_sync_frequency"
                android:entries="@array/pref_sync_list"
                android:entryValues="@array/pref_sync_list_values"
                android:dialogTitle="@string/pref_category_statistics_dialog_title" />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_category_statistics">
        <ListPreference
                android:key="store_statistics"
                android:title="@string/pref_item_store_statistics"
                android:entries="@array/pref_statistics_list"
                android:entryValues="@array/pref_statistics_list_values"
                android:dialogTitle="@string/pref_category_statistics_dialog_title" />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_category_about">
        <PreferenceScreen
                android:title="@string/pref_item_site"
                android:summary="@string/app_link">
            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/app_link" />
        </PreferenceScreen>
		<Preference 
		    android:title="@string/pref_item_version"
		    android:summary="@string/version_name"
		    android:selectable="false"
		    />
    </PreferenceCategory>
</PreferenceScreen>