<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/load_more_lo"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <ProgressBar
            android:id="@android:id/progress"
            style="@android:style/Widget.ProgressBar.Small.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/retry_lo"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/cp_load_about" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/failed_to_load"
            android:textSize="15sp" />

        <Button
            android:id="@+id/retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:minWidth="50dp"
            android:text="@string/retry" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/complete_lo"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/all_items_downloaded" />
    </LinearLayout>

</LinearLayout>