<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:baselineAligned="false"
    android:orientation="horizontal"
    style="?android:attr/buttonBarStyle"
   
    >
    <LinearLayout
        android:id="@+id/cp_bp_params_item"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@drawable/abs__tab_indicator_ab_holo"
        android:orientation="horizontal"
     	android:padding="5dp"
        >
        <ImageView
            android:id="@+id/cp_bottom_panel_params_img"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:duplicateParentState="true"
            android:contentDescription="@null"
            android:src="@drawable/settings_purple" 
            android:padding="2dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|left"
            android:duplicateParentState="true"
            android:singleLine="true"
            android:text="@string/settings" 
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cp_bp_calendar_item"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@drawable/abs__tab_indicator_ab_holo"
        android:orientation="horizontal"
        android:padding="5dp"
        
        >
        <ImageView
            android:id="@+id/cp_bottom_panel_calendar_img"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:duplicateParentState="true"
            android:contentDescription="@null"
            android:src="@drawable/calendar_red_white"
            android:padding="2dp"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|left"
            android:duplicateParentState="true"
            android:singleLine="true"
            android:text="@string/timeslot"
            android:textColor="@android:color/white" />
    </LinearLayout>
	<LinearLayout
        android:id="@+id/cp_bp_add_item"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@drawable/abs__tab_indicator_ab_holo"
        android:orientation="horizontal"
       	android:padding="5dp"        
        >
        <ImageView
            android:id="@+id/cp_bottom_panel_add_img"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:duplicateParentState="true"
            android:contentDescription="@null"
            android:src="@drawable/add_green"
            android:padding="2dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|left"
            android:duplicateParentState="true"
            android:singleLine="true"
            android:text="@string/add" 
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>